--- a/index.html
+++ b/index.html
@@ -29,5 +29,5 @@
   }
 </style>
 <body>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="./bezier.js"></script>
